--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,10 @@ psycopg2 = "^2.9.1"
 Jinja2 = "^3.0.1"
 python-multipart = "^0.0.5"
 alembic = "^1.6.5"
+google-auth = "^2.0.2"
+requests = "^2.26.0"
+google-api-python-client = "^2.19.1"
+google-auth-oauthlib = "^0.4.6"
 
 [tool.poetry.dev-dependencies]
 black = "^21.7b0"
